ansible-awx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: awx 
  namespace: platform 
spec:
  ingressClassName: nginx 
  rules:
    - host: awx.waifuprotect.org
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend:
              service:
                name: awx-service 
                port:
                  number: 80
